[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Stinger_V2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Rings_1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Pawns/Pawn_17_Parts/Pawn_17_Stinger.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Rings_3.png" type="Texture" id=4]

[node name="Pawn_17_Stinger" type="Node2D"]
script = ExtResource( 3 )

[node name="Pawn_17_Stinger_V2" type="Sprite" parent="."]
modulate = Color( 0.313726, 0.313726, 0.313726, 1 )
position = Vector2( 0, -12 )
texture = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 3
local_coords = false
texture = ExtResource( 2 )
direction = Vector2( 0, 1 )
spread = 5.0
gravity = Vector2( 0, 15 )
initial_velocity = 10.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 0, 6 )
emitting = false
amount = 10
local_coords = false
texture = ExtResource( 4 )
direction = Vector2( 0, 1 )
spread = 5.0
gravity = Vector2( 0, 15 )
initial_velocity = 30.0

[node name="Pawn_17_Stinger_Shield" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 0, -13 )
scale = Vector2( 1.3, 1.1 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
